Testando metodo pix Asaas Sandbox v04

--- a/src/app/features/pages/planos/checkout05Assas/checkout05Assas.component.html
+++ b/src/app/features/pages/planos/checkout05Assas/checkout05Assas.component.html
@@ -148,7 +148,7 @@
                                 <input type="text" id="form-checkout__Cep" formControlName="cep"
                                     placeholder="Informe seu CEP..." class="input-full-width" mask="00000-000" />
                                 <div class="error" *ngIf="isRequired('cep')">
-                                    Informe o CEP!
+                                    Informe um CEP válido!
                                 </div>
                             </div>
                             <div class="form-field">
