--- a/src/app/features/pages/auth/signup/signup.component.html
+++ b/src/app/features/pages/auth/signup/signup.component.html
@@ -1,6 +1,6 @@
 <app-page-container>
     <div class="ng-main">
-        <div class="ng-logo" (click)="pageCategorias()"></div>
+        <div class="ng-logo" (click)="pageHome()"></div>
         <app-form-signup (registroBtn)="enviar($event)"></app-form-signup>
     </div>
 </app-page-container>
