--- a/src/app/shared/component/plano_itens/planositem.component.html
+++ b/src/app/shared/component/plano_itens/planositem.component.html
@@ -14,6 +14,6 @@
             <li [style.white-space]="'pre-line'">{{ sanitizeDescription(itens?.description) }}</li>
             
         </ul>
-        <button (click)="pageCheckout02(itens)" class="ng-btn-cadastrar">Cadastrar Agora</button>
+        <button (click)="pageCreateEmpresa(itens)" class="ng-btn-cadastrar">Cadastrar Agora</button>
     </div>
 </div>
