--- a/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
+++ b/src/app/shared/component/form-cadastro-empresa/form-cadastro-empresa.component.scss
@@ -1,9 +1,10 @@
 .ng-main {
-        width: 100%;
-        height: 100dvh;
-        background: var(--background-color-container);
-        overflow: auto;
-        position: fixed;
+    width: 100%;
+    height: 100dvh;
+    background: var(--background-color-container);
+    overflow: auto;
+    position: fixed;
+
     .container {
         display: flex;
         flex-direction: column;
@@ -86,9 +87,9 @@
             }
         }
 
-
-
-
+        .mat-mdc-chip-set {
+            max-width: 200px;
+        }
 
         form {
             display: flex;
@@ -145,7 +146,7 @@
                 display: flex;
                 justify-content: space-between;
                 gap: 0 15px;
-                
+
                 div {
                     flex: 1;
                 }
@@ -157,6 +158,41 @@
                 color: #FF8401;
                 padding: 2px 5px;
             }
+
+            .selectPlan {
+                color: #FFF;
+                margin-bottom: 10px;
+                font-size: 16px;
+            }
+
+            .mat-mdc-chip-set {
+                max-width: 80%;
+            }
+
+            mat-chip-option {
+                padding: 20px 0;
+                border-radius: 12px;
+                font-weight: 550;
+                font-size: 16px;
+                background-color: #F2F2F2;
+                color: #ccc;
+                transition: all 0.3s ease;
+
+                h4 {
+                    margin: 0;
+                }
+
+                &.mdc-evolution-chip--selected {
+                    background-color: #1976d2;
+                    color: white;
+                }
+
+                &:hover {
+                    background-color: #e0e0e0;
+                }
+
+            }
+
         }
 
 
@@ -194,6 +230,9 @@
         }
     }
 }
+
+
+
 // 
 @media screen and (min-width:730px) {
     .ng-main {
