Consumindo api reset de senha e verificação de email v01

--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -16,22 +16,22 @@
 
                 </div>
                 <div>
-                    <p class="ng-p" [class.active]="currentStep >= 1"></p>
-                    <p class="ng-p" [class.active]="currentStep >= 2"></p>
-                    <p class="ng-p" [class.active]="currentStep >= 3"></p>
+                    <p class="ng-p" [class.active]="currentStep >= 1">Informe seu email</p>
+                    <p class="ng-p" [class.active]="currentStep >= 2">Informe o código</p>
+                    <p class="ng-p" [class.active]="currentStep >= 3">Resete sua senha</p>
                 </div>
             </div>
         </div>
 
-        <form [formGroup]="form.passwordform" (ngSubmit)="onSubmit()">
+        <form [formGroup]="form.passwordform">
             <!-- Step 1 -->
             <div *ngIf="currentStep === 1" class="form-step">
                 <p></p>
 
                 <fieldset class="ng-fieldset">
                     <legend>Email</legend>
-                    <input type="email" class="ng-input" placeholder="Seu Email" formControlName="email"
-                        (keydown.enter)="next()">
+                    <input #primeiroInput type="email" class="ng-input" placeholder="Seu Email" formControlName="email"
+                        (keydown.enter)="enviarCodigoEmail()">
                 </fieldset>
                 @if (isRequired('email')) {
                 <small class="ng-error">Informe um email válido!</small>
@@ -39,41 +39,52 @@
             </div>
 
             <!-- Step 2 -->
-            <div *ngIf="currentStep === 2" class="form-step">
+            <div *ngIf="currentStep === 2" class="form-step step-2">
                 <div class="card flex justify-center custom-otp">
-                    <app-inputOPT (codigoCompleto)="onCodigoCompleto($event)"></app-inputOPT>
-                    
+                    <p-inputotp #primeiroInput autofocus [length]="6" formControlName="code" (keydown.enter)="validarCodigo()" />
                 </div>
-                <small *ngIf="otpInvalido" class="ng-error">Código inválido. Tente novamente!</small>
+                @if (isRequired('code')) {
+                <small class="ng-error">Informe o código de verificação!</small>
+                }
+                
+                <button mat-flat-button type="button" (click)="enviarCodigoEmail()">Reenviar código</button>
             </div>
 
             <!-- Step 3 -->
             <div *ngIf="currentStep === 3" class="form-step">
                 <fieldset class="ng-fieldset">
-                    <legend>Razão Social (opcional)</legend>
-                    <input type="text" class="ng-input" placeholder="Razão Social" formControlName="razaoSocial"
-                        (keydown.enter)="focarProximoCampo('cnpj')">
+                    <legend>Senha</legend>
+                    <div class="ng-password-btn">
+                        <input #primeiroInput [type]="ativo?'text':'password'" class="ng-input" placeholder="Senha"
+                            formControlName="password" (keydown.enter)="focarProximoCampo('repeatPassword')">
+                        <mat-icon (click)="visible()">{{icon}}</mat-icon>
+                    </div>
                 </fieldset>
-                @if (isRequired('razaoSocial')) {
-                <small class="ng-error">Informe a Razão Social</small>
-                }
+                <app-password-strength-bar
+                    [senha]="form.passwordform.get('password')?.value"></app-password-strength-bar>
+
+                <div *ngIf="getFirstPasswordErrorMessage() as mensagem" class="ng-error">
+                    {{ mensagem }}
+                </div>
+
                 <fieldset class="ng-fieldset">
-                    <legend>CNPJ (opcional)</legend>
-                    <input type="text" class="ng-input" placeholder="CNPJ" formControlName="cnpj"
-                        mask="00.000.000/0000-00">
+                    <legend>Confirme sua senha</legend>
+                    <input [type]="ativo?'text':'password'" class="ng-input" placeholder="Confirme sua senha"
+                        formControlName="repeatPassword">
                 </fieldset>
-                @if (isRequired('cnpj')) {
-                <small class="ng-error">Informe o CNPJ</small>
-                }
+
+                <div *ngIf="senhasNaoConferem()">
+                    <small class="ng-error">As senhas não coincidem</small>
+                </div>
             </div>
 
             <div class="buttons">
-                <button mat-flat-button type="button" (click)="prev()" *ngIf="currentStep > 1"
-                    class="ng-btn">Voltar</button>
-                <button mat-flat-button type="button" (click)="next()" *ngIf="currentStep < 3" class="ng-btn"
-                    [disabled]="!isCurrentStepValid()" (click)="validarOTP(codigoOTP)" [disabled]="codigoOTP.length <= 6">Próximo</button>
-                <button mat-flat-button type="submit" *ngIf="currentStep === 3" class="ng-btn"
-                    [disabled]="!isCurrentStepValid()">Cadastrar</button>
+                <button mat-flat-button type="button" (click)="enviarCodigoEmail()" *ngIf="currentStep === 1"
+                    class="ng-btn" [disabled]="!isCurrentStepValid()">Enviar código</button>
+                <button mat-flat-button *ngIf="currentStep === 2" class="ng-btn" [disabled]="!isCurrentStepValid()"
+                    (click)="validarCodigo()">Confirmar código de verificação</button>
+                <button mat-flat-button *ngIf="currentStep === 3" class="ng-btn"
+                    [disabled]="senhasNaoConferem() || !isCurrentStepValid()" (click)="novaSenha()">Criar nova senha</button>
             </div>
         </form>
     </div>
