--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
@@ -1,8 +1,9 @@
 .ng-main {
-        width: 100%;
-        height: 100dvh;
-        background: var(--background-color-container);
-        overflow: auto;
+    width: 100%;
+    height: 100dvh;
+    background: var(--background-color-container);
+    overflow: auto;
+
     .container {
         display: flex;
         flex-direction: column;
@@ -95,7 +96,7 @@
             justify-content: center;
             width: 100%;
             gap: 10px 0;
-            
+
 
             .form-step .ng-fieldset {
                 width: 100%;
@@ -145,7 +146,7 @@
                 display: flex;
                 justify-content: space-between;
                 gap: 0 15px;
-                
+
                 div {
                     flex: 1;
                 }
@@ -159,7 +160,7 @@
             }
         }
 
-        
+
 
 
         .buttons {
@@ -201,19 +202,25 @@
     display: flex;
     justify-content: center;
 }
+
 .custom-otp ::ng-deep input {
-  background-color: transparent; /* cor de fundo */
-  border: 2px solid #bbb; /* borda */
-  color: #fff;            /* cor do texto */
-  border-radius: 8px;        /* bordas arredondadas */
-  height: 50px;
-  font-size: 16px;
+    background-color: transparent;
+    /* cor de fundo */
+    border: 2px solid #bbb;
+    /* borda */
+    color: #fff;
+    /* cor do texto */
+    border-radius: 8px;
+    /* bordas arredondadas */
+    height: 50px;
+    font-size: 16px;
 }
 
 /* Adiciona efeito ao focar */
 .custom-otp ::ng-deep input:focus {
-  border-color: #68bd7b;     /* verde ao focar */
-  box-shadow: 0 0 5px #68bd7b;
+    border-color: #68bd7b;
+    /* verde ao focar */
+    box-shadow: 0 0 5px #68bd7b;
 }
 
 // 
@@ -288,6 +295,26 @@
                 }
 
             }
+
+
+            .ng-password-btn {
+                display: flex;
+                padding: 2px;
+
+                mat-icon {
+                    cursor: pointer;
+                    transform: scale(0.0.97);
+                }
+            }
         }
     }
+}
+
+
+.step-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
