correção da api alteração de senha

--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -72,10 +72,12 @@
                     <input [type]="ativo?'text':'password'" class="ng-input" placeholder="Confirme sua senha"
                         formControlName="repeatPassword">
                 </fieldset>
-
-                <div *ngIf="senhasNaoConferem()">
+                @if (senhasNaoConferem()) {
+                    <div>
                     <small class="ng-error">As senhas não coincidem</small>
                 </div>
+                }
+                
             </div>
 
             <div class="buttons">
