Consumindo api reset de senha e verificação de email v03

--- a/src/app/shared/component/form-login/form-login.component.scss
+++ b/src/app/shared/component/form-login/form-login.component.scss
@@ -92,7 +92,7 @@
     .ng-btn-signup {
         height: 25px;
         border-radius: 10px;
-        background-color: #fff;
+        background-color: #ccc;
         margin-top: 20px;
     }
 }
