--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.html
@@ -46,7 +46,7 @@
                 @if (isRequired('code')) {
                 <small class="ng-error">Informe o código de verificação!</small>
                 }
-                
+
                 <button mat-flat-button type="button" (click)="enviarCodigoEmail()">Reenviar código</button>
             </div>
 
@@ -73,11 +73,11 @@
                         formControlName="repeatPassword">
                 </fieldset>
                 @if (senhasNaoConferem()) {
-                    <div>
+                <div>
                     <small class="ng-error">As senhas não coincidem</small>
                 </div>
                 }
-                
+
             </div>
 
             <div class="buttons">
@@ -86,8 +86,10 @@
                 <button mat-flat-button *ngIf="currentStep === 2" class="ng-btn" [disabled]="!isCurrentStepValid()"
                     (click)="validarCodigo()">Confirmar código de verificação</button>
                 <button mat-flat-button *ngIf="currentStep === 3" class="ng-btn"
-                    [disabled]="senhasNaoConferem() || !isCurrentStepValid()" (click)="novaSenha()">Criar nova senha</button>
+                    [disabled]="senhasNaoConferem() || !isCurrentStepValid()" (click)="novaSenha()">Criar nova
+                    senha</button>
             </div>
         </form>
+        <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary" (click)="pageSignin()">Login</button>
     </div>
 </div>
