--- a/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
+++ b/src/app/shared/component/form-resetPassword/form-resetPassword.component.scss
@@ -223,6 +223,14 @@
     box-shadow: 0 0 5px #68bd7b;
 }
 
+
+.ng-btn-signup {
+    height: 25px;
+    border-radius: 10px;
+    background-color: #ccc;
+    margin-top: 40dvh;
+}
+
 // 
 @media screen and (min-width:730px) {
     .ng-main {
@@ -305,6 +313,10 @@
                     cursor: pointer;
                     transform: scale(0.0.97);
                 }
+            }
+
+            .ng-btn-signup {
+                margin-top: 10dvh;
             }
         }
     }
