--- a/src/app/shared/component/form-signup/form-signup.component.html
+++ b/src/app/shared/component/form-signup/form-signup.component.html
@@ -41,6 +41,9 @@
 
                                 <button mat-raised-button [disabled]="!isRequiredNext()" class="ng-btn ng-btn-proximo"
                                     (click)="btnProximo()">Proximo</button>
+                                <span class="ng-text" (click)="pageResetPassword()">Esqueceu sua senha?</span>
+                                <button class="ng-btn ng-btn-signup" mat-flat-button color="secundary"
+                                    (click)="pageSignin()">Login</button>
 
 
                             </div>
