--- a/src/app/shared/component/form-signup/form-signup.component.scss
+++ b/src/app/shared/component/form-signup/form-signup.component.scss
@@ -127,7 +127,7 @@
                     .ng-btn-signup {
                         height: 25px;
                         border-radius: 10px;
-                        background-color: #bbb;
+                        background-color: #ccc;
                         margin-top: 20px;
                     }
                 }
